<resources>
    <string name="app_name">乐乐音乐</string>
    <string name="back_tip">再按一次返回桌面</string>
    <string name="exit_tip">程序出现异常,即将退出！</string>

    <string name="title_icon">&#xe8a3;</string>
    <string name="title_user">我的</string>
    <string name="title_recommend">排行</string>
    <string name="title_special">歌单</string>
    <string name="title_search">&#xe600;</string>

    <string name="def_text">乐乐音乐，开心每一天</string>
    <string name="def_artist">乐乐音乐</string>
    <string name="def_songName">开心每一天</string>
    <string name="copyright">copyright ©2015-2017 zhangliangming All Rights Reserved.</string>

    <string name="loadmore">点击加载更多</string>
    <string name="loading">正在加载...</string>
    <string name="nomore">已经到底了</string>
    <string name="nodata">数据为空</string>

    <!-- tab my -->
    <string name="tab_localmusic">本地音乐</string>
    <string name="tab_like">喜欢</string>
    <string name="tab_download">下载</string>
    <string name="tab_centent">最近</string>
    <string name="tab_wifi">仅wifi联网</string>
    <string name="tab_wifi_img">&#xe8a0;</string>
    <string name="tab_desktoplrc">桌面歌词</string>
    <string name="tab_desktoplrc_img">&#xe89f;</string>
    <string name="tab_locklrc">锁屏歌词</string>
    <string name="tab_locklrc_img">&#xe884;</string>
    <string name="tab_hello">问候语</string>
    <string name="tab_hello_img">&#xe8a2;</string>
    <string name="tab_control">耳机线控</string>
    <string name="tab_control_img">&#xe8a1;</string>
    <string name="tab_close">退出程序</string>
    <string name="tab_close_img">&#xe812;</string>

    <string name="count_song">共有%d首歌曲</string>
    <string name="wait_download">等待下载</string>
    <string name="click_pause">点击暂停</string>
    <string name="click_continue_download">点击继续下载</string>
    <string name="cancel_success">取消成功</string>
    <string name="added_collection">已添加收藏</string>
    <string name="download_management">下载管理</string>
    <string name="downloading">下载中</string>
    <string name="download_success">下载完成</string>
    <string name="like">喜欢</string>
    <string name="unknown">未知</string>
    <string name="lrc_set_success">歌词设置成功</string>
    <string name="recent_play">最近播放</string>
    <string name="please_enter_keyword">请输入关键字</string>
    <string name="do_you_quit_the_application">是否退出应用？</string>
    <string name="local_song_no_download">本地歌曲，不用下载!</string>
    <string name="song_has_added">歌曲已添加!</string>
    <string name="song_has_downloaded">歌曲已下载!</string>
    <string name="has_add_to_download">已添加到下载</string>
    <string name="online_playback_error">在线播放错误</string>
    <string name="current_network_unavailable">当前网络不可用</string>
    <string name="current_network_not_wifi">当前网络不是wifi</string>
    <string name="request_error">请求出错!</string>
    <string name="play_error_and_play_next_song">播放歌曲出错，1秒后播放下一首</string>
    <string name="about">关于</string>
    <string name="order_play">顺序播放</string>
    <string name="random_play">随机播放</string>
    <string name="single_play">单曲播放</string>
    <string name="please_choose_a_song">请选择歌曲</string>
    <string name="restore">还原了</string>
    <string name="need_access_read_sms">需要访问短信</string>
    <string name="need_access_read_write_external_storage">需要访问本地读写权限</string>
    <string name="update_local_songs">"更新本地歌曲(%d)"</string>
    <string name="scan_local_songs">"已扫描(%d)首歌曲"</string>
    <string name="add_success">"添加成功"</string>
    <string name="add_fail">"添加失败"</string>
    <string name="choose_lyrics">"选择歌词"</string>
    <string name="not_lyrics">"无歌词"</string>
    <string name="please_enter_singer_name">"请输入歌手名称"</string>
    <string name="current_network_not_available">当前网络不可用，点击屏幕刷新</string>
    <string name="current_network_not_wifi_close_only_wifi_mode">当前网络不是WIFI，关闭仅WIFI联网模式</string>

    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="share">分享</string>
    <string name="delete">删除</string>
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="weather_temp">%s°</string>
    <string name="weather_wind">%1$s风%2$s级&#160;&#160;湿度%3$s%%</string>
    <string name="timer_set">设置成功，将于%s分钟后关闭</string>
    <string name="timer_cancel">定时停止播放已取消</string>
    <string name="search_tips">歌曲名、歌手名</string>

    <string name="menu_setting">功能设置</string>
    <string name="menu_share">推荐给朋友</string>
    <string name="menu_about">关于更多</string>
    <string name="menu_skin_peeler">换肤</string>
    <string name="menu_night">夜间模式</string>
    <string name="menu_timer">定时停止播放</string>
    <string name="menu_exit">退出应用</string>
    <string name="menu_update">检查更新</string>
    <string name="cur_version">当前版本 V%s</string>
    <string name="network">网络</string>
    <string name="mobile_network_play">允许使用移动网络播放视频</string>
    <string name="mobile_network_download">允许使用移动网络下载</string>
    <string name="play">播放</string>
    <string name="sound_effect">音效调节</string>
    <string name="tips">温馨提示</string>
    <string name="play_tips">当前处于移动网络，确定打开移动网络播放开关吗？</string>
    <string name="play_tips_sure">立即打开</string>
    <string name="download_tips">当前处于移动网络，下载将消耗较多流量，是否继续下载？</string>
    <string name="download_tips_sure">继续下载</string>
    <string name="device_not_support">您的设备不支持此功能</string>

    <string name="no_net_img">&#xe62d;</string>
    <string name="loading_img">&#xe68e;</string>

    <string name="title_cancel">取消</string>
    <string name="clean_img">&#xe63f;</string>
    <string name="scan_img">&#xe640;</string>
    <string name="close_img">&#xe689;</string>


    //
    <string name="downloadpause_img">&#xe605;</string>
    <string name="downloading_img">&#xe6de;</string>
    <string name="detail_img">&#xe601;</string>
    <string name="delete_img">&#xe76b;</string>
    <string name="like_img">&#xe616;</string>
    <string name="liked_img">&#xe628;</string>
    <string name="more_img">&#xe602;</string>

    //字体
    <string name="ziti_jia">&#xe6f9;</string>
    <string name="ziti_jian">&#xe6f6;</string>

    //播放模式
    <string name="mode_all">&#xe630;</string>
    <string name="mode_random">&#xe660;</string>
    <string name="mode_single">&#xe62f;</string>


    //桌面歌词弹出窗口提示语
    <string name="desktop_dialog_tip">1.进入设置>更多应用>乐乐音乐>权限管理>显示悬浮窗\n2.开启允许</string>
    <string name="desktop_dialog_title">立即设置</string>
    <string name="help">帮助</string>
    <string name="please_manually_go_to_permission_management_page_to_set_up">请手动前往权限管理页面进行设置</string>
</resources>
