<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_setting"
            android:icon="@mipmap/ic_menu_settings"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/action_skin_peeler"
            android:icon="@mipmap/ic_menu_skin"
            android:title="@string/menu_skin_peeler" />
        <item
            android:id="@+id/action_night"
            android:icon="@mipmap/ic_menu_night"
            android:title="@string/menu_night" />
        <item
            android:id="@+id/action_timer"
            android:icon="@mipmap/ic_menu_timer"
            android:title="@string/menu_timer" />
        <item
            android:id="@+id/action_exit"
            android:icon="@mipmap/ic_menu_exit"
            android:title="@string/menu_exit" />
        <item
            android:id="@+id/action_about"
            android:icon="@mipmap/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>