<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/title_height"
    android:background="@color/colorPrimary"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/iv_menu"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@mipmap/ic_menu" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <base.widget.IconfontIndicatorTextView
            android:id="@+id/myImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_user"
            android:textColor="#FFF"
            android:textSize="@dimen/title_size" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <base.widget.IconfontIndicatorTextView
            android:id="@+id/recommendImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_recommend"
            android:textColor="#FFF"
            android:textSize="@dimen/title_size" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <base.widget.IconfontImageButtonTextView
            android:id="@+id/searchImageButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_search"
            android:textColor="#FFF"
            android:textSize="@dimen/title_icon_size"
            android:layout_alignParentTop="true"/>


    </RelativeLayout>

</LinearLayout>
