<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical">


    <com.zlm.hp.widget.ListItemRelativeLayout
        android:id="@+id/itemBG"
        android:layout_width="match_parent"
        android:layout_height="@dimen/songitem_height"
        android:clickable="true">

        <View
            android:id="@+id/status"
            android:layout_width="5dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:background="@color/defColor"
            android:visibility="invisible" />


        <TextView
            android:id="@+id/songIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|center"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/status"
            android:singleLine="true"
            android:text="000"
            android:textColor="#000"
            android:textSize="15dp"
            android:visibility="gone" />


        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/item_more"
            android:layout_toRightOf="@+id/songIndex"
            android:orientation="vertical">


            <TextView
                android:id="@+id/songName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="歌曲名称"
                android:textColor="#000"
                android:textSize="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/islocal"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dp"
                    android:background="@mipmap/ald"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/singerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:text="歌手名称"
                    android:textColor="@color/def_bar_title_color"
                    android:textSize="12dp" />


            </LinearLayout>


        </LinearLayout>


        <ImageView
            android:id="@+id/item_more"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/item_more"
            android:clickable="true" />


        <com.zlm.hp.widget.DividerView
            android:layout_width="match_parent"
            android:layout_height="1.5dip"
            android:layout_alignLeft="@+id/content"
            android:layout_alignParentBottom="true" />


    </com.zlm.hp.widget.ListItemRelativeLayout>

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#263c56"
        android:orientation="horizontal">

        <com.zlm.hp.widget.IconfontImageButtonTextView
            android:id="@+id/unlike_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/like_img"
            android:textColor="#FFF"
            android:textSize="@dimen/title_icon_size" />


        <com.zlm.hp.widget.IconfontImageButtonTextView
            android:id="@+id/liked_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/liked_img"
            android:textColor="#ff5b5b"
            android:textSize="@dimen/title_icon_size" />

        <RelativeLayout
            android:id="@+id/downloadParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1">

            <ImageView
                android:clickable="true"
                android:id="@+id/download_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:background="@drawable/download" />

            <ImageView
                android:clickable="true"
                android:id="@+id/downloaded_menu"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:background="@drawable/downloaded" />


        </RelativeLayout>


        <com.zlm.hp.widget.IconfontImageButtonTextView
            android:id="@+id/detail_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/detail_img"
            android:textColor="#FFF"
            android:textSize="@dimen/title_icon_size" />

        <com.zlm.hp.widget.IconfontImageButtonTextView
            android:id="@+id/delete_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/delete_img"
            android:textColor="#FFF"
            android:textSize="@dimen/title_icon_size" />

    </LinearLayout>
</LinearLayout>
